NULL=

backdir = $(datadir)/peony/patterns

back_DATA = \
	ukui-blue_gray_rough.png \
	ukui-blue_ridge.png \
	ukui-blue_type.png \
	ukui-brushed_metal.png \
	ukui-burlap.jpg \
	ukui-camouflage.png \
	ukui-chalk.jpg \
	ukui-cork.png \
	ukui-countertop.png \
	ukui-dark-ukui.jpg \
	ukui-dots.png \
	ukui-fibers.png \
	ukui-fleur_de_lis.png \
	ukui-floral.png \
	ukui-fossil.png \
	ukui.jpg \
	ukui-green_weave.png \
	ukui-ice.png \
	ukui-manila_paper.png \
	ukui-moss_ridge.png \
	ukui-numbers.png \
	ukui-ocean_stripes.png \
	ukui-purple_marble.png \
	ukui-reset.png \
	ukui-ridged_paper.png \
	ukui-rough_paper.png \
	ukui-sky_ridge.png \
	ukui-snow_ridge.png \
	ukui-stucco.jpg \
	ukui-terracotta.png \
	ukui-wavy_white.png \
	$(NULL)

EXTRA_DIST = $(back_DATA)
