@YELP_HELP_RULES@

HELP_ID = parchives
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = 					\
	figures/parchives_home.png		\
	figures/parchives_leftarrow.png	\
	figures/parchives_main_window.png	\
	figures/parchives_rightarrow.png	\
	figures/parchives_uparrow.png

HELP_LINGUAS = bg ca cs de el en_GB es fi fr it ja oc nl ru sv vi uk zh_CN

-include $(top_srcdir)/git.mk
