NULL = 

SUBDIRS = reference

man_MANS = \
	peony.1 \
	peony-autorun-software.1 \
	peony-connect-server.1 \
	peony-file-management-properties.1 \
	$(NULL)

EXTRA_DIST = \
	$(man_MANS) \
	architecture.txt \
	dnd.txt \
	load-states.dia \
	peony-internals.sxw \
	peony-internals.pdf \
	peony-io.txt \
	peony.faq \
	recommended-books.html \
	smoketests.html \
	state-machines.txt \
	style-guide.html \
	key_mouse_navigation.txt \
	$(NULL)
